--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,17 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+
+<script
+  src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+  crossorigin></script>
+
+<script
+  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin></script>
+
+<script>var Alert = ReactBootstrap.Alert;</script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +38,56 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      document.onkeydown = function(e) {
+      if(event.keyCode == 123) {
+      return false;
+      }
+      if(e.keyCode ==91) {
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'S'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'H'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'A'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'F'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'E'.charCodeAt(0)){
+      return false;
+      }
+      }
+      
+      window.onresize = function(){
+      console.log("resize");
+      }
+      @HostListener('window:resize', ['$event'])
+      onResize(event) {
+      this.innerWidth = window.innerWidth;
+      }
+      window.resize(function() {
+        alert('size reganged');
+      console.log('window was resized');
+      });
+
+      </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
